# aldakit

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml
docs/: architecture.d2  extending-aldapy.md
scripts/: fluidsynth-gm.py
src/: CMakeLists.txt
src/aldakit/: __init__.py  api.py  ast_nodes.py  cli.py  parser.py  repl.py  score.py
src/aldakit/compose/: __init__.py  attributes.py  core.py
src/aldakit/midi/: __init__.py  generator.py  midi_to_ast.py  smf_reader.py  soundfont.py  transcriber.py  transform.py
src/aldapy/: __init__.py  __main__.py  cli.py  repl.py
src/pyalda/: __init__.py
tests/: demo.py  test_api.py  test_compose.py  test_midi.py  test_midi_import.py  test_midi_transform.py  test_parser.py  test_scanner.py  test_shared_suite.py
